0.12.2/_sources/gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__apodization__plot_proc_em.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__apodization__plot_proc_em.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__apodization__plot_proc_em.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__apodization__plot_proc_em.py:


Exponential window multiplication
=================================

In this example, we perform exponential window multiplication to apodize a NMR signal in the time domain.

Requires the official ``spectrochempy-nmr`` plugin.
Install with: ``pip install spectrochempy[nmr]``.

.. GENERATED FROM PYTHON SOURCE LINES 18-19

.. code-block:: default









.. GENERATED FROM PYTHON SOURCE LINES 21-29

.. code-block:: default

    import spectrochempy as scp

    Hz = scp.ur.Hz
    us = scp.ur.us

    path = scp.preferences.datadir / "nmrdata" / "bruker" / "tests" / "nmr" / "topspin_1d"
    dataset1D = scp.nmr.read(path, expno=1, remove_digital_filter=True)








.. GENERATED FROM PYTHON SOURCE LINES 30-31

Normalize the dataset values and reduce the time domain

.. GENERATED FROM PYTHON SOURCE LINES 31-34

.. code-block:: default

    dataset1D /= dataset1D.real.data.max()  # normalize
    dataset1D = dataset1D[0.0:15000.0]








.. GENERATED FROM PYTHON SOURCE LINES 35-36

Apply exponential window apodization

.. GENERATED FROM PYTHON SOURCE LINES 36-38

.. code-block:: default

    new1, curve1 = scp.em(dataset1D.copy(), lb=20 * Hz, retapod=True, inplace=False)








.. GENERATED FROM PYTHON SOURCE LINES 39-41

Apply a shifted exponential window apodization
default units are HZ for broadening and microseconds for shifting

.. GENERATED FROM PYTHON SOURCE LINES 41-45

.. code-block:: default

    new2, curve2 = dataset1D.copy().em(
        lb=100 * Hz, shifted=10000 * us, retapod=True, inplace=False
    )








.. GENERATED FROM PYTHON SOURCE LINES 46-49

Plotting
--------
Compare the original FID with the exponential window and the apodized signal.

.. GENERATED FROM PYTHON SOURCE LINES 49-54

.. code-block:: default

    ax = dataset1D.real.plot(color="k", label="original FID", xlim=(0, 15000))
    _ = curve1.plot(clear=False, color="r", ls="--", label="window, lb = 20 Hz")
    _ = new1.real.plot(clear=False, color="r", label="apodized FID, lb = 20 Hz")
    _ = ax.legend()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__apodization__plot_proc_em_001.png
   :alt: plot spectrochempy nmr  processing  apodization  plot proc em
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__apodization__plot_proc_em_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 55-56

Shifted windows are easier to read on a separate figure.

.. GENERATED FROM PYTHON SOURCE LINES 56-70

.. code-block:: default

    ax = dataset1D.real.plot(color="k", label="original FID", xlim=(0, 15000))
    _ = curve2.plot(
        clear=False,
        color="b",
        ls="--",
        label="window, lb = 100 Hz, shifted = 10000 us",
    )
    _ = new2.real.plot(
        clear=False,
        color="b",
        label="apodized FID, lb = 100 Hz, shifted = 10000 us",
    )
    _ = ax.legend()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__apodization__plot_proc_em_002.png
   :alt: plot spectrochempy nmr  processing  apodization  plot proc em
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__apodization__plot_proc_em_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 71-74

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python
scp.show()

.. GENERATED FROM PYTHON SOURCE LINES 76-77

sphinx_gallery_thumbnail_number = -1


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.511 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__apodization__plot_proc_em.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_spectrochempy_nmr__processing__apodization__plot_proc_em.py <plot_spectrochempy_nmr__processing__apodization__plot_proc_em.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_spectrochempy_nmr__processing__apodization__plot_proc_em.ipynb <plot_spectrochempy_nmr__processing__apodization__plot_proc_em.ipynb>`
